# sakura

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/: dependabot.yml
crates/sakura-cli/: Cargo.toml
crates/sakura-cli/src/: main.rs
crates/sakura-core/: Cargo.toml  build.rs
crates/sakura-core/examples/: decode_test.rs
crates/sakura-core/src/: archive.rs  audio.rs  bytes.rs  catalog.rs  dsc.rs  error.rs  ffi.rs  flagdb.rs  gdb.rs  image.rs  install_manifest.rs  lib.rs  movie_decoder.c  movie_decoder.rs  render.rs  runtime.rs  runtime_graph.rs  runtime_handles.rs  runtime_input.rs  runtime_sound.rs  scenario.rs  scenario_probe.rs  scenario_session_api.rs  scenario_snapshot.rs  script.rs  script_library.rs  sdc.rs  session.rs  session_probe.rs  sniff.rs  system_bytecode.rs  system_host.rs  system_runtime.rs  system_script.rs  system_trace.rs  system_vm.rs  system_vm_ops.rs
crates/sakura-core/src/image/: v2.rs
crates/sakura-core/src/movie_c_headers/: stdlib.h  string.h
crates/sakura-core/tests/: local_install.rs  local_runtime_host_state.rs  local_system_vm.rs  system_vm_codeptr.rs
tests/: audio-mixer.mjs  cloud-state.mjs  graph-renderer.mjs  input-controller.mjs  local-catalog.mjs  local-server.mjs  movie-decoder.mjs  runtime-session-input-bridge.mjs  runtime-state-export.mjs  scenario-auto-skip.mjs  scenario-backlog.mjs  scenario-choice-resume.mjs  scenario-config-window.mjs  scenario-dialog-window.mjs  scenario-filter.mjs  scenario-message-style.mjs  scenario-message-window.mjs  scenario-routes.mjs  scenario-shake.mjs  (+13 more)
(+57 files in other folders)
