[package]
name = "sakura-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sakura-core = { path = "../sakura-core" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
