[package]
name = "sakura-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.2.46"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
